--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ FRONTEND_URL=http://localhost:3000
 BACKEND_URL=http://localhost:4400
 PORT=4400
 JWT_SECRET=shhh
+PLATFORM_FEE_PERCENTAGE=20
 
 # DATABASE
 DATABASE_URL=mysql://root:@localhost:3306/highlight-ts
