--- a/.env.dev
+++ b/.env.dev
@@ -22,3 +22,4 @@ S3_ACCESS_URL=https://big-dog-s3bucket.s3.us-east-2.amazonaws.com
 
 # OTHER
 POSTMAN_COLLECTION_URL=https://documenter.getpostman.com/view/34047242/2sA3Bj9Zt3
+FiIGMA_DESIGN_URL=https://www.figma.com/design/pFQNfsIpH1s7EIUcO1cP9S/HiLight-App-UI-Dev-File?node-id=1-15899&m=dev
