--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "build": "tcs",
+    "build": "tsc",
     "start:dev": "set NODE_ENV=dev&& nodemon src/server.ts",
     "start:prod": "dist/server.js"
   },
