--- a/.env.dev
+++ b/.env.dev
@@ -14,8 +14,11 @@ STRIPE_SECRET_KEY=sk_test_51PIVq9CuPDpzvWxoOxosdQlwzO4pbpn3ItUdvG01Y1cl10X8je0aE
 STRIPE_WEBHOOK_SECRET=whsec_otP4jBHeYlJxOb3skVxZfah3ezuGvXjX
 
 # S3
-BUCKET_NAME=big-dog-s3bucket
-BUCKET_REGION=us-east-2
-ACCESS_KEY_ID=AKIAQ6U3S22IQVOZWI6H
-SECRET_ACCESS_KEY=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
-S3_ACCESS_URL=https://big-dog-s3bucket.s3.us-east-2.amazonaws.com
+S3_BUCKET_NAME=highlight-s3
+S3_BUCKET_REGION=us-east-2
+S3_ACCESS_KEY_ID=AKIAQ6U3S22IQVOZWI6H
+S3_SECRET_ACCESS_KEY=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
+S3_ACCESS_URL=https://highlight-s3.s3.us-east-2.amazonaws.com
+
+# OTHER
+POSTMAN_COLLECTION_URL=https://documenter.getpostman.com/view/34047242/2sA3XVALGy
