--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,7 @@
 FRONTEND_URL=http://localhost:3000
 
 # BACKEND
-BACKEND_URL=http://localhost:4400
+BACKEND_URL=https://gqtpw5tc-4400.inc1.devtunnels.ms
 PORT=4400
 JWT_SECRET=shhh
 PLATFORM_FEE_PERCENTAGE=20
