--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-req-res-inspector": "^3.0.2",
+    "firebase-admin": "^12.3.1",
     "generic-response": "^3.0.1",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
