--- a/.env.dev
+++ b/.env.dev
@@ -20,5 +20,7 @@ S3_ACCESS_KEY_ID=AKIAQ6U3S22IQVOZWI6H
 S3_SECRET_ACCESS_KEY=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
 S3_ACCESS_URL=https://highlight-s3.s3.us-east-2.amazonaws.com
 
+GOOGLE_CLIENT_ID=...
+
 # OTHER
 POSTMAN_COLLECTION_URL=https://documenter.getpostman.com/view/34047242/2sA3XVALGy
