--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.583.0",
     "@prisma/client": "^5.14.0",
+    "axios": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-req-res-inspector": "^3.0.2",
     "firebase-admin": "^12.3.1",
     "generic-response": "^3.0.1",
+    "google-auth-library": "^9.14.0",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
