--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "multi-groupby": "^2.0.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
+    "socket.io": "^4.7.5",
     "stripe": "^15.8.0"
   },
   "prisma": {
